[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/enemies/boss1.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/enemy3.png" type="Texture" id=2]
[ext_resource path="res://scenes/audio/enemy_audio_player.tscn" type="PackedScene" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 86.7603, 59.0219, 96.283, 148.807, -99.6109, 147.446, -91.4487, 50.8596 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 39.1472, -229.377, 73.1566, -173.602, 85.4, -66.1325, 86.7603, 59.0219, -91.4487, 50.8596, -84.6468, -70.2136, -66.9619, -177.683, -34.313, -228.017, 3.77753, -236.179 )

[sub_resource type="Animation" id=3]

resource/name = "death"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "DeathSound"
}, {
"args": [  ],
"method": "VictoryScene"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2.5, 2.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="boss1" type="Area2D"]

transform/scale = Vector2( 0.4, 0.4 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="hitbox" type="CollisionPolygon2D" parent="."]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( -99.6109, 147.446, 96.283, 148.807, 86.7603, 59.0219, 85.4, -66.1325, 73.1566, -173.602, 39.1472, -229.377, 3.77753, -236.179, -34.313, -228.017, -66.9619, -177.683, -84.6468, -70.2136, -91.4487, 50.8596 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="hit_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/death = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="firepoint_l" type="Position2D" parent="."]

transform/pos = Vector2( -146.92, 131.956 )

[node name="firepoint_r" type="Position2D" parent="."]

transform/pos = Vector2( 146.92, 131.956 )

[node name="audio" parent="." instance=ExtResource( 3 )]

[connection signal="area_enter" from="." to="." method="_on_boss1_area_enter"]


